# TuringMachineVisualizer

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/document/: CodeDocument.cpp  CodeDocument.h  Document.cpp  Document.h  DocumentManager.cpp  DocumentManager.h  TapeDocument.cpp  TapeDocument.h
src/model/: State.cpp  State.h  Tape.cpp  Tape.h  Transition.cpp  Transition.h  TuringMachine.cpp  TuringMachine.h
src/parser/: CodeParser.cpp  CodeParser.h
src/project/: Project.cpp  Project.h  ProjectManager.cpp  ProjectManager.h
src/ui/: CodeEditorWidget.cpp  CodeEditorWidget.h  DocumentTabManager.cpp  DocumentTabManager.h  MainWindow.cpp  MainWindow.h  PreferencesDialog.cpp  PreferencesDialog.h  PropertiesEditorWidget.cpp  PropertiesEditorWidget.h  StateDialog.cpp  StateDialog.h  StatesListWidget.cpp  StatesListWidget.h  TapeControlWidget.cpp  TapeControlWidget.h  TapeWidget.cpp  TapeWidget.h  TransitionDialog.cpp  TransitionDialog.h  TransitionsListWidget.cpp  TransitionsListWidget.h
src/ui/document/: CodeEditorView.cpp  CodeEditorView.h  DocumentView.cpp  DocumentView.h  TapeVisualizationView.cpp  TapeVisualizationView.h
